--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,19 @@ gast==0.5.3
 grpcio==1.46.3
 html5lib==0.9999999
 importlib-metadata==4.11.4
+imutils==0.5.4
 kiwisolver==1.4.2
 libopencv==0.0.1
 Markdown==3.3.7
 matplotlib==3.5.2
 numpy==1.22.4
-opencv-python==4.5.5.64
+opencv-contrib-python==4.6.0.66
 packaging==21.3
 Pillow==9.1.1
 protobuf==3.20.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
+scipy==1.8.1
 six==1.16.0
 tensorboard==1.8.0
 tensorflow @ https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.8.0-py3-none-any.whl
