--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 absl-py==1.0.0
 astor==0.8.1
+black==22.6.0
 bleach==1.5.0
+click==8.1.3
 cycler==0.11.0
 fonttools==4.33.3
 gast==0.5.3
@@ -12,10 +14,13 @@ kiwisolver==1.4.2
 libopencv==0.0.1
 Markdown==3.3.7
 matplotlib==3.5.2
+mypy-extensions==0.4.3
 numpy==1.22.4
 opencv-contrib-python==4.6.0.66
 packaging==21.3
+pathspec==0.9.0
 Pillow==9.1.1
+platformdirs==2.5.2
 protobuf==3.20.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -24,5 +29,7 @@ six==1.16.0
 tensorboard==1.8.0
 tensorflow @ https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.8.0-py3-none-any.whl
 termcolor==1.1.0
+tomli==2.0.1
+typing_extensions==4.3.0
 Werkzeug==2.1.2
 zipp==3.8.0
