--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,14 @@ mypy-extensions==0.4.3
 numpy==1.22.4
 opencv-contrib-python==4.6.0.66
 packaging==21.3
+pandas==2.0.0
 pathspec==0.9.0
 Pillow==9.1.1
 platformdirs==2.5.2
 protobuf==3.20.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2023.3
 scipy==1.8.1
 six==1.16.0
 tensorboard==1.8.0
@@ -31,5 +33,6 @@ tensorflow @ https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.8.0-
 termcolor==1.1.0
 tomli==2.0.1
 typing_extensions==4.3.0
+tzdata==2023.3
 Werkzeug==2.1.2
 zipp==3.8.0
